Fixed the contact form alignment

--- a/styles.css
+++ b/styles.css
@@ -759,6 +759,61 @@ textarea:focus {
     .bottom li {
         font-size: 0.9em;
     }
+
+    #contact-form {
+        height: auto;
+        width: 100vw;
+    }
+
+    #contact {
+        height: auto;
+        width: auto;
+        border: none;
+        grid-template-columns: 80vw;
+        grid-template-rows: 100px auto 50px 100px;
+        grid-template-areas:
+        "heading"
+        "contact"
+        "send"
+        "icn";
+    }
+
+    #contact-details {
+        padding: 0 15px;
+        border: none;
+        font-size: 0.8em;
+        grid-area: contact;
+        display: grid;
+        grid-template-columns: 91px auto;
+        grid-template-rows: repeat(4, 60px);
+        grid-column-gap: 5px;
+    }
+
+    .field-name {
+        margin: 0;
+        justify-self: start;
+        text-transform: uppercase;
+    }
+
+    #send-button {
+        padding: 0;
+        margin: 0;
+        width: 50vw;
+        height: 40px;
+        font-size: 1em;
+        justify-self: center;
+        align-self: center;
+    }
+
+    #social-handles {
+        flex-direction: row;
+    }
+    
+    .icn {
+        height: 40px;
+        width: 40px;
+        padding: 0 10px;
+    }
 }
 
 @media only screen and (max-width: 576px) {
